kubernetes/apps/default/jellyfin/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app jellyfin
spec:
  rules:
    - host: mov.4kb.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: *app
                port:
                  number: 8096
